fixing small spacing bug

--- a/sigal-dental/scss/custom/about.scss
+++ b/sigal-dental/scss/custom/about.scss
@@ -38,6 +38,9 @@
     object-fit: contain;
   }
 }
+.section-about-goal {
+  margin-bottom: 6rem;
+}
 .section-about-goal .bg-white {
   height: 18rem;
   padding-top: 8rem;
@@ -62,7 +65,7 @@
 .section-about-values {
   margin-bottom: 6rem;
   h4 {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
   .about-value-single {
     height: 7.5rem;
